# n5_challenge

./: Dockerfile  README.md  pyproject.toml
traffic_infraction_register/: manage.py
traffic_infraction_register/infractions/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
traffic_infraction_register/infractions/migrations/: 0001_initial.py  0002_initial.py
traffic_infraction_register/officers/: admin.py  forms.py  models.py  tests.py
traffic_infraction_register/officers/migrations/: 0001_initial.py
traffic_infraction_register/persons/: admin.py  models.py  tests.py
traffic_infraction_register/persons/migrations/: 0001_initial.py
traffic_infraction_register/tests/: test_setup.py
traffic_infraction_register/traffic_infraction_register/: asgi.py  settings.py  urls.py  wsgi.py
traffic_infraction_register/vehicles/: admin.py  models.py  tests.py
traffic_infraction_register/vehicles/migrations/: 0001_initial.py
